--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "require": {
         "bacon/bacon-qr-code": "^1.0"
     },
+    "autoload": {
+        "psr-4": {
+            "Classes\\":"Classes/"
+            }       
+    },
+
     "license": "bsd",
     "authors": [
         {
