pagination.php added

--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,23 @@
         "bacon/bacon-qr-code": "^1.0"
     },
     "autoload": {
+        "files": [
+            "config/db.php",
+            "functions/content.php",
+            "functions/slug.php",
+            "functions/html.php",
+            "functions/thumbnail.php",
+            "functions/books.php",
+            "functions/pagination.php"
+        ],
         "psr-4": {
-            "Classes\\":"Classes/"
-            }       
+            "Classes\\": "Classes/"
+        }
     },
 
     "license": "bsd",
-    "authors": [
-        {
-            "name": "apredsa",
-            "email": "apredsa+new@gmail.com"
-        }
-    ]
+    "authors": [{
+        "name": "apredsa",
+        "email": "apredsa+new@gmail.com"
+    }]
 }
