--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "project",
     "require": {
         "bacon/bacon-qr-code": "^1.0",
-        "mpdf/mpdf": "^6.1",
-        "swiftmailer/swiftmailer": "5.4.8"
+        "mpdf/mpdf": "^6.1"
     },
     "autoload": {
         "files": [
